# evidence-based-hdb-resale-market-analysis

./: .gitignore  .vercelignore  Makefile  README.md  package-lock.json  pyproject.toml  theme.css
apps/web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/lib/: artifacts.ts  content.ts  format.ts  markdown-url.ts  section1-dashboard1-sandbox.ts  section1-dashboard1.ts  section1-dashboard2.ts  section1-dashboard3.ts  section2-valuation.ts  sections.ts  server-data.ts  theme.ts
configs/: design_tokens.json
deck/: HDB Resale Market Analysis Tableau.twbx  theme_tokens.json
docs/: README.md  codex_handoff_prompt.md  frontend_architecture.md  section1_dashboards.md  section2_question_a_case.md  section2_question_b_case.md  section2_question_c_case.md  section3_policy_notes.md  section3_question_a_case.md  section3_question_c_case.md  section3_question_c_model_summaries.md  section3_question_d_model_summaries.md
scripts/: README.md  upload_section1_r2.sh  upload_web_assets_r2.sh
src/: __init__.py
src/analysis/: README.md  __init__.py  deck.py  run_all.py
src/common/: __init__.py  config.py  geography.py  utils.py
src/pipeline/: README.md  __init__.py  build_building_tableau_assets.py  build_resale_analysis_dataset.py  calculate_building_poi.py  features.py  hdb_api.py  ingest_sources.py  map_entities.py  pipeline_common.py  publish_dashboard3_web_artifacts.py  publish_web_artifacts.py  render_dashboard3_plotly_map.py  validate_web_artifacts.py  web_artifacts.py
(+101 files in other folders)
